--- a/src/page/order-confirm/index.css
+++ b/src/page/order-confirm/index.css
@@ -2,14 +2,13 @@
  * @Author: Pace 
  * @Date: 2018-11-29 21:24:17 
  * @Last Modified by: Pace
- * @Last Modified time: 2018-11-30 00:58:07
+ * @Last Modified time: 2018-11-30 20:48:30
  */
  
 /* 地址部分的样式 */
 .panel-body.address-con{
     margin-right: -20px;
     padding-bottom: 10px;
-    height: 140px;
     overflow: hidden;
     transition: all 2s;
 }
@@ -47,6 +46,7 @@
 .address-item .address-title .postcode {
     color: #aaa;
     margin-left: 10px;
+    float: right;
 }
 /* 地址detail */
 .address-item .address-detail{
@@ -55,8 +55,6 @@
 .address-item .address-detail .personal-detail {
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
 }
 .address-item .address-detail .phone-number {
     position: absolute;
@@ -186,15 +184,16 @@
     font-weight: 900;
 }
 .submit-wrap .submit-detail div:nth-of-type(2) {
+    margin-right: 5px;
     margin-bottom: 5px;
 }
 .submit-wrap .submit-detail div:nth-of-type(3) {
     margin-bottom: 5px;
     margin-right: 5px;
 }
-.submit-wrap .submit-detail .submit-address span {
-    margin-right: 5px;
-}
+/* .submit-wrap .submit-detail .submit-address span {
+    margin-right: 2px;
+} */
 .submit-wrap .submit-detail div:nth-of-type(4) {
     margin-bottom: 5px;
     margin-right: 5px;
@@ -221,4 +220,156 @@
     border: 3px solid #fff0e8;
     min-width: 230px;
     padding: 10px 10px 10px 20px;
+}
+
+/* modal */
+.modal{
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,.47);
+   
+}
+.modal-contaniner{
+    border: 2px solid #ff9838;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 550px;
+    height: 390px;
+    background: #fff;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+/* 弹窗头部 */
+.modal-contaniner .modal-header {
+    text-align: left;
+    top: 0;
+    width: 100%;
+    height: 40px;
+    /* background: #ff9838; */
+    vertical-align: bottom;
+    overflow: hidden;
+    border-bottom: 2px solid #ffbc79;
+}
+.modal-contaniner .modal-header .modal-title{
+    display: block;
+    margin-top: 9px;
+    font-size: 14px;
+    color: #555;
+    margin-left: 15px;
+}
+.modal-contaniner .modal-header .close {
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    height: 20px;
+    line-height: 18px;
+    width: 20px;
+    border-radius: 50%;
+    background: #fff;
+    margin-right: 5px;
+    margin-top: 5px;
+}
+.modal-contaniner .modal-header .close i {
+    margin-top: 5px;
+    margin-left: 4.2px;
+    display: inline-block;
+    font-size: 16px;
+    color: #555;
+    transition: -webkit-transform .5s;
+    transition: transform .5s;
+    transition: transform .5s, -webkit-transform .5s;
+}
+/* 弹窗主体内容 */
+.modal-contaniner .modal-body {
+    width: 100%;
+    padding: 10px;
+    font-size: 12px;
+}
+.modal-contaniner .modal-body .form-line {
+    padding: 10px 0;
+}
+.modal-contaniner .modal-body .label {
+    text-align: right;
+    float: left;
+    width: 90px;
+    height: 25px;
+    line-height: 25px;
+    margin-right: 10px;
+}
+.modal-contaniner .modal-body .label strong {
+    display: inline-block;
+    height: 20px;
+    line-height: 20px;
+    vertical-align: middle;
+    color: #ff3000;
+    font-size: 14px;
+}
+.modal-contaniner .modal-body .label * {
+    color: #666;
+}
+.modal-contaniner .modal-body input {
+    outline: none;
+    padding: 0 5px;
+    height: 25px;
+    width: 200px;
+    border: 1px solid #ddd;
+    font-size: 12px;
+}
+.modal-contaniner .modal-body select {
+    cursor: pointer;
+    border: 1px solid #ddd;
+    height: 25px;
+    outline: none;
+    color: #888;
+    font-size: 12px;
+}
+.modal-contaniner .modal-body option::-ms-expand{ display: none; }
+.modal-contaniner .modal-body option{
+    -moz-appearance:none; /* Firefox */
+    -webkit-appearance:none; /* Safari 和 Chrome */
+    appearance:none;
+}
+/* --背景色字体颜色--*/
+.modal-contaniner .modal-body option:hover{
+    color:#fff;
+    background-color:#1E90FF;
+}
+.modal-contaniner .modal-body textarea {
+    resize: none;
+    width: 200px;
+    height: 60px;
+    padding: 5px;
+    outline: none;
+    border: 1px solid #ddd;
+    font-size: 12px;
+}
+.modal-contaniner .submit-save-address {
+    background: #ff9838;
+    color: #fff;
+    font-size: 14px;
+    display: inline-block;
+    padding: 8px 20px;
+    margin-top: -5px;
+    margin-left: 100px;
+    font-weight: 500;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.modal-contaniner .modal-body input:focus, .modal-contaniner .modal-body textarea:focus {
+    border: 1px solid #ff9838;
+}
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+    color:#b3b3b3;
 }
