--- a/src/view/index.html
+++ b/src/view/index.html
@@ -55,7 +55,7 @@
             </li>
 		</ul>
 		<div class="banner-con">
-			<div class="loading"></div>
+			<div class="loading2"></div>
 		</div>
         <div class="banner-right">
             <a href="./list.html?categoryId=100004">
