--- a/src/view/layout/footer.html
+++ b/src/view/layout/footer.html
@@ -22,3 +22,4 @@
 	</div>
 </div>
 <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="../../../node_modules/distpicker/dist/distpicker.js"></script>
