--- a/src/view/order-confirm.html
+++ b/src/view/order-confirm.html
@@ -33,6 +33,9 @@
 			</div>
 			
 		</div>
+		<div class="modal-wrap">
+				
+		</div>
 		<div class="submit-footer" >
 			<div class="submit-wrap">
 				<div class="submit-detail">
@@ -47,6 +50,7 @@
 							<span class="submit-address">
 								<span class="sb-final-province">- -</span>
 								<span class="sb-final-city">- -</span>
+								<span class="sb-final-district">- -</span>
 								<span class="sb-final-detail">- -</span>
 								
 							</span>
