--- a/src/view/list.html
+++ b/src/view/list.html
@@ -29,7 +29,7 @@
 		</ul>
 		<!-- list容器 -->
 		<ul class="p-list-con">
-			<div class="loading"></div>
+			<div class="loading2"></div>
 		</ul>
 		<!-- 分页容器 -->
 		<div class="pagination"></div>
