--- a/src/view/user-center-update.html
+++ b/src/view/user-center-update.html
@@ -23,7 +23,7 @@
 			<div class="panel">
 				<div class="panel-title">个人中心</div>
 				<div class="panel-body">
-					<div class="loading"></div>
+					<div class="loading2"></div>
 				</div>
 			</div>
 		</div>
