--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -2,7 +2,7 @@
 * @Author: Pace
 * @Date:   2018-11-22 11:28:15
  * @Last Modified by: Pace
- * @Last Modified time: 2018-11-30 02:21:57
+ * @Last Modified time: 2018-11-30 22:34:01
 */
 /*css reset 全局样式*/
 *{
@@ -125,7 +125,9 @@ input[type='checkbox']{
 	color: #aaa;
 	border-radius: 4px;
 }
-
+.yen {
+    font-family: Arial,Microsoft YaHei,sans-serif;
+}
 /*图标*/
 .label-default-ico{
 	position: absolute;
@@ -179,4 +181,12 @@ input::-webkit-input-placeholder {
     font-weight: bold;
     text-align: center;
     background: #eee;
+}
+.clearfix:after {
+    content:" ";
+    display:block;
+    height:0;
+    clear:both;
+    overflow:hidden;
+    visibility:hidden
 }
