--- a/src/view/index.html
+++ b/src/view/index.html
@@ -6,6 +6,11 @@
 	<title>嗯买商城 - <%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
+    <div class="notice-con">
+        <div class="w">
+            <p class="notice">数据库只有手机，冰箱和洗衣机！！！ 支付宝支付订单请使用支付宝沙箱！</p>
+        </div>
+    </div>
 	<%= require('html-loader!./layout/nav.html') %>
 	<%= require('html-loader!./layout/header.html') %>
 	<div class="w">
@@ -106,6 +111,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
+                    <a href="./list.html?categoryId=100002">
+                        <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f2.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f2.jpg" alt="数码3C" class="floor-banner" style="display: block;">
+                    </a>
                 <h1 class="floor-title">F2 数码3C</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -141,6 +149,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
+                    <a href="./list.html?categoryId=100003">
+                        <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f3.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f3.jpg" alt="箱包" class="floor-banner" style="display: block;">
+                    </a>
                 <h1 class="floor-title">F3 服装箱包</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -176,6 +187,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
+                <a href="./list.html?categoryId=100004">
+                    <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f4.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f4.jpg" alt="食品" class="floor-banner" style="display: block;">
+                </a>
                 <h1 class="floor-title">F4 食品生鲜</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -211,6 +225,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
+                <a href="./list.html?keyword=酒">
+                    <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f5.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f5.jpg" alt="酒水饮料" class="floor-banner" style="display: block;">
+                </a>
                 <h1 class="floor-title">F5 酒水饮料</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
