--- a/src/view/layout/footer.html
+++ b/src/view/layout/footer.html
@@ -16,7 +16,7 @@
 			</a>
 		</div>
 		<p class="copyright">
-			© 2018 enbuy.info 版权所有
+			© 2018 enbuys.com 版权所有
 			<a href="http://www.miibeian.gov.cn" class="link" target="_blank">黑ICP备18006292号</a>
 		</p>
 	</div>
