--- a/src/view/layout/header.html
+++ b/src/view/layout/header.html
@@ -3,13 +3,20 @@
 	<div class="w">
 		<div class="logo-wrap">
 			<a class="logo" href="./index.html">
-				<img src="../../image/logo.png" width="100px">
+				<img src="../../image/logo.png" width="91px">
 			</a>
 		</div>
 		
 		<div class="search-con">
 			<input class="search-input" id="search-input" placeholder="请输入商品名称"/>
 			<button class="search-btn" id="search-btn">搜索</button>
+			
+		</div>
+		<div class="focus-me" id="focus-me">
+			<div class="high-light">微信关注</div>
+			<div class="QA"></div>
+			<div class="focus-me-close" id="focus-me-close"><i class="fa fa-times-rectangle"></i>
+			</div>
 		</div>
 	</div>
 </div>
