--- a/src/view/user-register.html
+++ b/src/view/user-register.html
@@ -17,43 +17,43 @@
 						<p class="err-msg">Error</p>
 					</div>
 					<div class="user-item">
-						<input id="username" class="input-default" placeholder="请输入用户名" autocomplete="off">
+						<input id="username" class="input-default" placeholder="请输入用户名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入用户名'" autocomplete="off">
 						<label class="label-default-ico" for="username">
 							<i class="fa fa-user-circle"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input type="password" id="password" class="input-default" placeholder="请输入密码" autocomplete="off">
+						<input type="password" id="password" class="input-default" onfocus="this.placeholder=''" onblur="this.placeholder='请输入密码'" placeholder="请输入密码" autocomplete="off">
 						<label class="label-default-ico" for="password">
 							<i class="fa fa-lock"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input type="password" id="passwordConfirm" class="input-default" placeholder="请再次输入密码" autocomplete="off">
+						<input type="password" id="passwordConfirm" class="input-default" onfocus="this.placeholder=''" onblur="this.placeholder='请再次输入密码'" placeholder="请再次输入密码" autocomplete="off">
 						<label class="label-default-ico" for="passwordConfirm">
 							<i class="fa fa-lock"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input id="phone" class="input-default" placeholder="请输入手机号" autocomplete="off">
+						<input id="phone" class="input-default"  placeholder="请输入手机号" onfocus="this.placeholder=''" onblur="this.placeholder='请输入手机号'" autocomplete="off">
 						<label class="label-default-ico" for="phone">
 							<i class="fa fa-phone"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input id="email" class="input-default" placeholder="请输入邮箱" autocomplete="off">
+						<input id="email" class="input-default" placeholder="请输入邮箱" onfocus="this.placeholder=''" onblur="this.placeholder='请输入邮箱'" autocomplete="off">
 						<label class="label-default-ico" for="email">
 							<i class="fa fa-envelope"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input id="question" class="input-default" placeholder="请输入密码提示问题" autocomplete="off">
+						<input id="question" class="input-default" placeholder="请输入密码提示问题" onfocus="this.placeholder=''" onblur="this.placeholder='请输入密码提示问题'" autocomplete="off">
 						<label class="label-default-ico" for="question">
 							<i class="fa fa-question"></i>
 						</label>
 					</div>
 					<div class="user-item">
-						<input id="answer" class="input-default" placeholder="请输入密码提示问题答案" autocomplete="off">
+						<input id="answer" class="input-default"  placeholder="请输入密码提示问题答案" onfocus="this.placeholder=''" onblur="this.placeholder='请输入密码提示问题答案'" autocomplete="off">
 						<label class="label-default-ico" for="answer">
 							<i class="fa fa-key"></i>
 						</label>
