--- a/src/view/result.html
+++ b/src/view/result.html
@@ -33,9 +33,16 @@
 			<div class="result-content">
 				<a href="./index.html" class="link">继续购物</a>
 				<a href="./cart.html" class="link">去购物车查看</a>
-				<a href="./index.html" class="link">立即支付</a>
+				<a href="./order-confirm.html" class="link">立即支付</a>
 			</div>
 		</div>
+		<div class="result-con payment-success">
+				<h1 class="result-title">您的订单支付成功！</h1>
+				<div class="result-content">
+					<a href="./index.html" class="link">继续购物</a>
+					<a href="./order-detail.html?orderNo=" class="link order-number">查看该订单</a>
+				</div>
+			</div>
 	</div>
 	<%= require('html-loader!./layout/footer.html') %>
 </body>
