--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<%= require('html-loader!./layout/head-common.html') %>
-	<title>嗯买商城 - <%= htmlWebpackPlugin.options.title%></title>
+	<title>嗯买商城</title>
 </head>
 <body>
     <div class="notice-con">
