--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -1,8 +1,24 @@
 <!-- 写一些通用标签与脚本 -->
 <meta charset="UTF-8">
+    
 <!-- 如果浏览器是ie，先寻找edge浏览器，没有才有ie -->
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="keywords" content="enbuymall,电商">
-<meta name="description" content="enbuymall">
+<meta name="keywords" content="嗯买商城,嗯买,enbuy,enbuymall,电商,网上商城">
+<meta name="description" content="一个不知道干嘛的网站">
+<link rel="dns-prefetch" href="//cdn.bootcss.com">
+<link rel="dns-prefetch" href="//s.enbuys.com">
+<link rel="dns-prefetch" href="//image.enbuys.com">
+
 <link rel="icon" type="image/x-icon" href="/distresource/logo.png" />
+
+<!-- 统计 -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?4b592b4183da83bd0691f399ea4b83a7";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 
