--- a/src/view/index.html
+++ b/src/view/index.html
@@ -6,11 +6,11 @@
 	<title>嗯买商城</title>
 </head>
 <body>
-    <div class="notice-con">
+    <!-- <div class="notice-con">
         <div class="w">
             <p class="notice">数据库只有手机，冰箱和洗衣机！！！ 支付宝支付订单请使用支付宝沙箱！</p>
         </div>
-    </div>
+    </div> -->
 	<%= require('html-loader!./layout/nav.html') %>
 	<%= require('html-loader!./layout/header.html') %>
 	<div class="w">
@@ -21,7 +21,7 @@
             </li>
             <li class="keywords-item">
                 <a class="link" target="_blank" href="./list.html?keyword=电脑">电脑</a>
-                <a class="link" target="_blank" href="./list.html?keyword=办公配件">办公配件</a>
+                <a class="link" target="_blank" href="./list.html?keyword=办公">办公配件</a>
             </li>
             <li class="keywords-item">
                 <a class="link" target="_blank" href="./list.html?keyword=电视">电视</a>
@@ -34,8 +34,8 @@
                 <a class="link" target="_blank" href="./list.html?keyword=小家电">小家电</a>
             </li>
             <li class="keywords-item">
-                <a class="link" target="_blank" href="./list.html?keyword=厨卫家电">厨卫家电</a>
-                <a class="link" target="_blank" href="./list.html?keyword=小家电">小家电</a>
+                <a class="link" target="_blank" href="./list.html?keyword=男装">男装</a>
+                <a class="link" target="_blank" href="./list.html?keyword=女装">女装</a>
             </li>
             <li class="keywords-item">
                 <a class="link" target="_blank" href="./list.html?keyword=个护化妆">个护化妆</a>
@@ -57,6 +57,11 @@
                 <a class="link" target="_blank" href="./list.html?keyword=图书">图书</a>
                 <a class="link" target="_blank" href="./list.html?keyword=音像">音像</a>
                 <a class="link" target="_blank" href="./list.html?keyword=电子书">电子书</a>
+            </li>
+            <li class="keywords-item">
+                <a class="link" target="_blank" href="./list.html?keyword=零食">零食</a>
+                <a class="link" target="_blank" href="./list.html?keyword=酒">酒类</a>
+                <a class="link" target="_blank" href="./list.html?keyword=生鲜">生鲜</a>
             </li>
 		</ul>
 		<div class="banner-con">
@@ -118,7 +123,7 @@
                 <ul class="floor-list">
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100011" target="_blank">
-                            <span class="floor-text">笔记本电脑</span>
+                            <span class="floor-text">台式电脑</span>
                             <img class="floor-img" src="<%= require('../image/floor/floor2-1.jpg') %>" alt="笔记本电脑" />
                         </a>
                     </li>
@@ -130,7 +135,7 @@
                     </li>
                     <li class="floor-item">
                         <a href="./list.html?categoryId=100013" target="_blank">
-                            <span class="floor-text">平板电脑</span>
+                            <span class="floor-text">笔记本电脑</span>
                             <img class="floor-img" src="<%= require('../image/floor/floor2-3.jpg') %>" alt="平板电脑" />
                         </a>
                     </li>
