--- a/src/view/index.html
+++ b/src/view/index.html
@@ -44,7 +44,7 @@
             </li>
             <li class="keywords-item">
                 <a class="link" target="_blank" href="./list.html?keyword=母婴用品">母婴用品</a>
-                <a class="link" target="_blank" href="./list.html?keyword=儿童玩具">儿童玩具</a>
+                <a class="link" target="_blank" href="./list.html?keyword=玩具">儿童玩具</a>
                 <a class="link" target="_blank" href="./list.html?keyword=童装童鞋">童装童鞋</a>
             </li>
             <li class="keywords-item">
