--- a/src/view/index.html
+++ b/src/view/index.html
@@ -116,9 +116,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
-                    <a href="./list.html?categoryId=100002">
+                    <!-- <a href="./list.html?categoryId=100002">
                         <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f2.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f2.jpg" alt="数码3C" class="floor-banner" style="display: block;">
-                    </a>
+                    </a> -->
                 <h1 class="floor-title">F2 数码3C</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -154,9 +154,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
-                    <a href="./list.html?categoryId=100003">
+                    <!-- <a href="./list.html?categoryId=100003">
                         <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f3.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f3.jpg" alt="箱包" class="floor-banner" style="display: block;">
-                    </a>
+                    </a> -->
                 <h1 class="floor-title">F3 服装箱包</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -192,9 +192,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
-                <a href="./list.html?categoryId=100004">
+                <!-- <a href="./list.html?categoryId=100004">
                     <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f4.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f4.jpg" alt="食品" class="floor-banner" style="display: block;">
-                </a>
+                </a> -->
                 <h1 class="floor-title">F4 食品生鲜</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
@@ -230,9 +230,9 @@
                 </ul>
             </div>
             <div class="floor-wrap">
-                <a href="./list.html?keyword=酒">
+                <!-- <a href="./list.html?keyword=酒">
                     <img src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f5.jpg" data-src="//s.avenda2333.cn/ymall_fe/dist/resource/banner-f5.jpg" alt="酒水饮料" class="floor-banner" style="display: block;">
-                </a>
+                </a> -->
                 <h1 class="floor-title">F5 酒水饮料</h1>
                 <ul class="floor-list">
                     <li class="floor-item">
