--- a/src/view/user-login.html
+++ b/src/view/user-login.html
@@ -10,7 +10,7 @@
 	<div class="page-wrap">
 		<div class="w">
 			<div class="user-con">
-				<h2 class="myh2">用户登陆</h2>
+				<h2 class="myh2">用户登录</h2>
 				<div class="user-box">
 					<div class="error-item">
 						<i class="fa fa-minus-circle error-icon" id="error-icon"></i>
@@ -30,7 +30,7 @@
 						</label>
 					</div>
 					<div class="user-item">
-						<a class="btn btn-submit" id="submit">登陆</a>
+						<a class="btn btn-submit" id="submit">登录</a>
 					</div>
 					<div class="link-item">
 						<a class="link" href="./user-pass-reset.html">忘记密码</a>
